gitflow-feature-stash: fixingThings

--- a/WendigoFilmProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/WendigoFilmProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -161,7 +161,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Textures/Barrel
+ContentBrowserTab1.SelectedPaths=/Game/Scenes
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1027,26 +1027,26 @@ MRUItem1=/Game/StarterContent/Maps/Minimal_Default
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/barrelMat
-MRUItem1=/Game/Models/snowshoeMat
-MRUItem2=/Game/Models/outhouseMat
-MRUItem3=/Game/Models/brickMat
-MRUItem4=/Game/Models/shedStableMat
-MRUItem5=/Game/Models/lambert1
-MRUItem6=/Game/Models/woodItemsLambert1
-MRUItem7=/Game/Models/axeMat
-MRUItem8=/Game/Models/firewoodLambert
-MRUItem9=/Game/Models/houseItemsLambert
-MRUItem10=/Game/Models/woodItemsLambert
-MRUItem11=/Game/Models/woodBeamsMat
-MRUItem12=/Game/Models/wallWindowLambert
-MRUItem13=/Game/Textures/cabin_wallWindowLambert_Emissive
-MRUItem14=/Game/Models/roofMat
-MRUItem15=/Game/Models/porchMat
-MRUItem16=/Game/Models/doorMat
-MRUItem17=/Game/Models/chimneyMat
-MRUItem18=/Game/Models/groundMat
-MRUItem19=/Game/Scenes/Village
+MRUItem0=/Game/Scenes/Village
+MRUItem1=/Game/Models/barrelMat
+MRUItem2=/Game/Models/snowshoeMat
+MRUItem3=/Game/Models/outhouseMat
+MRUItem4=/Game/Models/brickMat
+MRUItem5=/Game/Models/shedStableMat
+MRUItem6=/Game/Models/lambert1
+MRUItem7=/Game/Models/woodItemsLambert1
+MRUItem8=/Game/Models/axeMat
+MRUItem9=/Game/Models/firewoodLambert
+MRUItem10=/Game/Models/houseItemsLambert
+MRUItem11=/Game/Models/woodItemsLambert
+MRUItem12=/Game/Models/woodBeamsMat
+MRUItem13=/Game/Models/wallWindowLambert
+MRUItem14=/Game/Textures/cabin_wallWindowLambert_Emissive
+MRUItem15=/Game/Models/roofMat
+MRUItem16=/Game/Models/porchMat
+MRUItem17=/Game/Models/doorMat
+MRUItem18=/Game/Models/chimneyMat
+MRUItem19=/Game/Models/groundMat
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1392,6 +1392,20 @@ InstancedFoliageActor.Replication=True
 InstancedFoliageActor.Collision=True
 InstancedFoliageActor.Input=True
 InstancedFoliageActor.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
