--- a/WendigoFilmProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/WendigoFilmProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1018,35 +1018,38 @@ SubstanceLink.TimeStamp=2021.11.02-21.32.44
 SubstanceLink.LastCompileMethod=Unknown
 SubstanceLiveLink.TimeStamp=2021.11.02-21.32.44
 SubstanceLiveLink.LastCompileMethod=Unknown
+EnvironmentLightingViewer.TimeStamp=2021.08.24-17.49.42
+EnvironmentLightingViewer.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Scenes/Village
-MRUItem1=/Game/StarterContent/Maps/Minimal_Default
+MRUItem1=/Game/Scenes/Forest
+MRUItem2=/Game/StarterContent/Maps/Minimal_Default
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=MapCheck
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Scenes/Village
-MRUItem1=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/DarkBarkLeaves
-MRUItem2=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/aspen05_dark_bark
-MRUItem3=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/aspenFoliageSpawner
-MRUItem4=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
-MRUItem5=/Engine/StarterContent/Textures/groundMoss
-MRUItem6=/Engine/MapTemplates/M_SM_Template_Map_Floor_groundMat_69B9CB79404D69B318BB82B9FC821929
-MRUItem7=/Game/Models/trellisMat
-MRUItem8=/Game/Models/FrontHalfCabin/woodItemsLambert
-MRUItem9=/Game/Models/FrontHalfCabin/woodBeamsMat
-MRUItem10=/Game/Models/FrontHalfCabin/wallWindowLambert
-MRUItem11=/Game/Models/FrontHalfCabin/roofMat
-MRUItem12=/Game/Models/FrontHalfCabin/porchMat
-MRUItem13=/Game/Models/FrontHalfCabin/houseItemsLambert
-MRUItem14=/Game/Models/FrontHalfCabin/doorMat
-MRUItem15=/Game/Models/FrontHalfCabin/chimneyMat
-MRUItem16=/Game/Models/BackHalfCabin/woodItemsLambert
-MRUItem17=/Game/Models/BackHalfCabin/woodBeamsMat
-MRUItem18=/Game/Models/BackHalfCabin/wallWindowLambert
-MRUItem19=/Game/Models/BackHalfCabin/roofMat
+MRUItem1=/Game/Scenes/Forest
+MRUItem2=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/DarkBarkLeaves
+MRUItem3=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/aspen05_dark_bark
+MRUItem4=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/aspenFoliageSpawner
+MRUItem5=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
+MRUItem6=/Engine/StarterContent/Textures/groundMoss
+MRUItem7=/Engine/MapTemplates/M_SM_Template_Map_Floor_groundMat_69B9CB79404D69B318BB82B9FC821929
+MRUItem8=/Game/Models/trellisMat
+MRUItem9=/Game/Models/FrontHalfCabin/woodItemsLambert
+MRUItem10=/Game/Models/FrontHalfCabin/woodBeamsMat
+MRUItem11=/Game/Models/FrontHalfCabin/wallWindowLambert
+MRUItem12=/Game/Models/FrontHalfCabin/roofMat
+MRUItem13=/Game/Models/FrontHalfCabin/porchMat
+MRUItem14=/Game/Models/FrontHalfCabin/houseItemsLambert
+MRUItem15=/Game/Models/FrontHalfCabin/doorMat
+MRUItem16=/Game/Models/FrontHalfCabin/chimneyMat
+MRUItem17=/Game/Models/BackHalfCabin/woodItemsLambert
+MRUItem18=/Game/Models/BackHalfCabin/woodBeamsMat
+MRUItem19=/Game/Models/BackHalfCabin/wallWindowLambert
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1483,6 +1486,72 @@ SkyLightComponent.RayTracing=True
 SkyLightComponent.Rendering=True
 SkyLightComponent.Tags=True
 SkyLightComponent.Cooking=True
+DirectionalLightComponent.Light=True
+DirectionalLightComponent.AtmosphereAndCloud=True
+DirectionalLightComponent.LightShafts=True
+DirectionalLightComponent.CascadedShadowMaps=True
+DirectionalLightComponent.DistanceFieldShadows=True
+DirectionalLightComponent.RayTracing=True
+DirectionalLightComponent.Performance=True
+DirectionalLightComponent.LightFunction=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Actor=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Actor=True
+SkyAtmosphereComponent.Planet=True
+SkyAtmosphereComponent.Atmosphere=True
+SkyAtmosphereComponent.Atmosphere - Rayleigh=True
+SkyAtmosphereComponent.Atmosphere - Mie=True
+SkyAtmosphereComponent.Atmosphere - Absorption=True
+SkyAtmosphereComponent.Art Direction=True
+VolumetricCloudComponent.Layer=True
+VolumetricCloudComponent.Planet=True
+VolumetricCloudComponent.Cloud Material=True
+VolumetricCloudComponent.Cloud Tracing=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1598,6 +1667,7 @@ bConvertSceneUnit=False
 IncludeSubsurface=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/StarterContent/Blueprints/BP_LightStudio.BP_LightStudio;
 RecentlyPlaced=/Game/Models/trellis.trellis;
@@ -1617,7 +1687,6 @@ RecentlyPlaced=/Game/Models/firepit.firepit;
 RecentlyPlaced=/Game/Models/fence.fence;
 RecentlyPlaced=/Game/Models/bucket.bucket;
 RecentlyPlaced=/Game/Models/brokenBoards_brokenBoard2.brokenBoards_brokenBoard2;
-RecentlyPlaced=/Game/Models/brokenBoards_brokenBoard1.brokenBoards_brokenBoard1;
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1705,6 +1774,7 @@ PreviewMaterial.Material=True
 InstancedFoliageActor.Actor=True
 InstancedFoliageActor.Collision=True
 StaticMeshComponent.VirtualTexture=True
+DirectionalLightComponent.AtmosphereAndCloud=True
 
 [AssetEditorToolkitTabLocation]
 /Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial.TutorialMaterial=1
@@ -1837,6 +1907,9 @@ MeshComponent="\"Object.Lighting.LightmassSettings\" "
 PrimitiveComponent="\"Object.Lighting.LightmassSettings\" "
 SceneComponent=
 ActorComponent=
+DirectionalLightComponent="\"Object.Light.ModulatedShadowColor\" \"Object.LightShafts.BloomTint\" "
+LightComponent="\"Object.Light.ModulatedShadowColor\" \"Object.LightShafts.BloomTint\" "
+LightComponentBase=
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
