--- a/WendigoFilmProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/WendigoFilmProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -161,7 +161,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/HDRI
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -172,6 +172,8 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [Directories2]
 UNR=../../../../../../Users/nzoll/OneDrive/Documents/GitHub/WENDIGO_UNREAL/WendigoFilmProject/Content/Scenes
@@ -1027,29 +1029,29 @@ MRUItem1=/Game/Scenes/Forest
 MRUItem2=/Game/StarterContent/Maps/Minimal_Default
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LightingResults
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Scenes/Village
-MRUItem1=/Game/Scenes/Forest
-MRUItem2=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/DarkBarkLeaves
-MRUItem3=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/aspen05_dark_bark
-MRUItem4=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/aspenFoliageSpawner
-MRUItem5=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
-MRUItem6=/Engine/StarterContent/Textures/groundMoss
-MRUItem7=/Engine/MapTemplates/M_SM_Template_Map_Floor_groundMat_69B9CB79404D69B318BB82B9FC821929
-MRUItem8=/Game/Models/trellisMat
-MRUItem9=/Game/Models/FrontHalfCabin/woodItemsLambert
-MRUItem10=/Game/Models/FrontHalfCabin/woodBeamsMat
-MRUItem11=/Game/Models/FrontHalfCabin/wallWindowLambert
-MRUItem12=/Game/Models/FrontHalfCabin/roofMat
-MRUItem13=/Game/Models/FrontHalfCabin/porchMat
-MRUItem14=/Game/Models/FrontHalfCabin/houseItemsLambert
-MRUItem15=/Game/Models/FrontHalfCabin/doorMat
-MRUItem16=/Game/Models/FrontHalfCabin/chimneyMat
-MRUItem17=/Game/Models/BackHalfCabin/woodItemsLambert
-MRUItem18=/Game/Models/BackHalfCabin/woodBeamsMat
-MRUItem19=/Game/Models/BackHalfCabin/wallWindowLambert
+MRUItem0=/Game/StarterContent/Materials/M_Emissive_Inst
+MRUItem1=/Game/StarterContent/Materials/M_Emissive
+MRUItem2=/Game/StarterContent/Materials/M_Glass_2
+MRUItem3=/Game/Scenes/Village
+MRUItem4=/Game/Scenes/Forest
+MRUItem5=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/DarkBarkLeaves
+MRUItem6=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/aspen05_dark_bark
+MRUItem7=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/aspenFoliageSpawner
+MRUItem8=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
+MRUItem9=/Engine/StarterContent/Textures/groundMoss
+MRUItem10=/Engine/MapTemplates/M_SM_Template_Map_Floor_groundMat_69B9CB79404D69B318BB82B9FC821929
+MRUItem11=/Game/Models/trellisMat
+MRUItem12=/Game/Models/FrontHalfCabin/woodItemsLambert
+MRUItem13=/Game/Models/FrontHalfCabin/woodBeamsMat
+MRUItem14=/Game/Models/FrontHalfCabin/wallWindowLambert
+MRUItem15=/Game/Models/FrontHalfCabin/roofMat
+MRUItem16=/Game/Models/FrontHalfCabin/porchMat
+MRUItem17=/Game/Models/FrontHalfCabin/houseItemsLambert
+MRUItem18=/Game/Models/FrontHalfCabin/doorMat
+MRUItem19=/Game/Models/FrontHalfCabin/chimneyMat
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1552,6 +1554,22 @@ PointLight.RayTracing=True
 PointLight.Tags=True
 PointLight.Cooking=True
 PointLight.Actor=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionVertexColor.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1667,6 +1685,8 @@ bConvertSceneUnit=False
 IncludeSubsurface=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/StarterContent/Blueprints/BP_LightStudio.BP_LightStudio;
@@ -1685,8 +1705,6 @@ RecentlyPlaced=/Game/Models/outhouse_outhouseMain.outhouse_outhouseMain;
 RecentlyPlaced=/Game/Models/outhouse_outhouseDoor.outhouse_outhouseDoor;
 RecentlyPlaced=/Game/Models/firepit.firepit;
 RecentlyPlaced=/Game/Models/fence.fence;
-RecentlyPlaced=/Game/Models/bucket.bucket;
-RecentlyPlaced=/Game/Models/brokenBoards_brokenBoard2.brokenBoards_brokenBoard2;
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1757,16 +1775,17 @@ ShowUnusedLayers=True
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 FoliageType_InstancedStaticMesh=FoliageType_InstancedStaticMesh.Procedural.Clustering,FoliageType_InstancedStaticMesh.Procedural.Collision,FoliageType_InstancedStaticMesh.Procedural.Growth,
 ProceduralFoliageBlockingVolume=ProceduralFoliageBlockingVolume.Collision.Collision,
-BrushComponent=
+BrushComponent=ProceduralFoliageBlockingVolume.Collision.Collision,
 ProceduralFoliageVolume=ProceduralFoliageBlockingVolume.Collision.Collision,
 SceneComponent=
 InstancedFoliageActor=ProceduralFoliageBlockingVolume.Collision.Collision,
 BP_Sky_Sphere_C=ProceduralFoliageBlockingVolume.Collision.Collision,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
 Actor=ProceduralFoliageBlockingVolume.Collision.Collision,
 LandscapeGizmoRenderComponent=ProceduralFoliageBlockingVolume.Collision.Collision,
 BP_LightStudio_C=ProceduralFoliageBlockingVolume.Collision.Collision,
+PostProcessVolume=PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
@@ -1827,6 +1846,9 @@ DirectionalLightComponent.AtmosphereAndCloud=True
 /Game/Models/trellisMat.trellisMat=1
 /Engine/StarterContent/Textures/groundMoss.groundMoss=1
 /Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight.HDRI_Epic_Courtyard_Daylight=1
+/Game/StarterContent/Materials/M_Glass_2.M_Glass_2=1
+/Game/StarterContent/Materials/M_Emissive.M_Emissive=1
+/Game/StarterContent/Materials/M_Emissive_Inst.M_Emissive_Inst=1
 
 [MaterialEditor]
 PrimType=1
@@ -1896,20 +1918,21 @@ Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 ProceduralFoliageVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ProceduralFoliageSpawner="\"Object.ProceduralFoliageSimulation.FoliageTypes\" "
 ProceduralFoliageBlockingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" "
-PrimitiveComponent="\"Object.Lighting.LightmassSettings\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 DirectionalLightComponent="\"Object.Light.ModulatedShadowColor\" \"Object.LightShafts.BloomTint\" "
 LightComponent="\"Object.Light.ModulatedShadowColor\" \"Object.LightShafts.BloomTint\" "
 LightComponentBase=
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1917,7 +1940,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
