gitflow-feature-stash: takeOutSubstance

--- a/WendigoFilmProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/WendigoFilmProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -161,7 +161,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Scenes
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1032,10 +1032,10 @@ MRUItem2=/Game/StarterContent/Maps/Minimal_Default
 LastLogListing=LightingResults
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Materials/M_Emissive_Inst
-MRUItem1=/Game/StarterContent/Materials/M_Emissive
-MRUItem2=/Game/StarterContent/Materials/M_Glass_2
-MRUItem3=/Game/Scenes/Village
+MRUItem0=/Game/Scenes/Village
+MRUItem1=/Game/StarterContent/Materials/M_Emissive_Inst
+MRUItem2=/Game/StarterContent/Materials/M_Emissive
+MRUItem3=/Game/StarterContent/Materials/M_Glass_2
 MRUItem4=/Game/Scenes/Forest
 MRUItem5=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/DarkBarkLeaves
 MRUItem6=/Game/Models/Aspen_trees/aspen05/aspen05_dark_bark/aspen05_dark_bark
@@ -1785,7 +1785,7 @@ MaterialInstanceConstant=
 Actor=ProceduralFoliageBlockingVolume.Collision.Collision,
 LandscapeGizmoRenderComponent=ProceduralFoliageBlockingVolume.Collision.Collision,
 BP_LightStudio_C=ProceduralFoliageBlockingVolume.Collision.Collision,
-PostProcessVolume=PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|BloomAdvanced,
+PostProcessVolume=PostProcessVolume.Lens.Lens
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
